<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/git_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@drawable/git_logo" />

        <RelativeLayout
            android:id="@+id/info_section_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/git_logo"
            android:layout_marginTop="15dp"
            android:background="@color/section_default_background_color">

            <ImageView
                android:id="@+id/info_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_action_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_info"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/info_icon"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/info_section_container">

            <RelativeLayout
                android:id="@+id/name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/name_label"
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="Test" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/owner_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/owner_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/owner" />

                <TextView
                    android:id="@+id/owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/owner_label"
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="Karol Kapcia" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/created_at_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/created_at_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/created_at" />

                <TextView
                    android:id="@+id/created_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/created_at_label"
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="16-10-15" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/updated_at_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/updated_at_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/updated_at" />

                <TextView
                    android:id="@+id/updated_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/updated_at_label"
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="15-11-15" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/language_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/language_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/language" />

                <TextView
                    android:id="@+id/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/language_label"
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="Java" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/watchers_count_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/watchers_count_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/watchers" />

                <TextView
                    android:id="@+id/watchers_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/watchers_count_label"
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="5" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/show_commits_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/info_container"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/show_commits"
            android:textSize="20sp"
            android:textColor="@color/button_font_color"
            android:background="@drawable/button_selector" />

        <RelativeLayout
            android:id="@+id/commits_section_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/show_commits_button"
            android:layout_marginTop="15dp"
            android:background="@color/section_default_background_color"
            android:visibility="gone">

            <ImageView
                android:id="@+id/commit_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_action_add_to_queue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commits"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/commit_icon"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>